# Django_study

./: .gitignore  README.txt  new_file.py  pyproject.toml
test_project/templates/: index.html
test_project/test_app/: admin.py  models.py  urls.py  views.py
test_project/test_app/migrations/: 0001_initial.py  0002_worker_photo.py
test_project/test_project/: settings.py  urls.py
