[tool.poetry]
name = "django test foldeer"
version = "0.1.0"
description = "Study"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.7"
django = "^4.2.4"

[tool.poetry.group.dev.dependencies]
Django = "^4.2.4"
psycopg2-binary = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
