[tool.poetry]
name = "django test foldeer"
version = "0.1.0"
description = "Study"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
pandas = "^2.0.3"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
Django = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
